default text added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 <body>
 
     <header></header>
-    <main></main>
+    <main>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum numquam fugit vitae nesciunt perferendis
+            eligendi incidunt ex exercitationem similique itaque mollitia rerum veniam, obcaecati facere corporis cum
+            voluptatem ducimus illo?
+        </p>
+    </main>
     <footer></footer>
 
 </body>
