--- a/index.html
+++ b/index.html
@@ -12,11 +12,18 @@
 
     <header></header>
     <main>
-        <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum numquam fugit vitae nesciunt perferendis
-            eligendi incidunt ex exercitationem similique itaque mollitia rerum veniam, obcaecati facere corporis cum
-            voluptatem ducimus illo?
-        </p>
+        <ul>Command list
+            <li>git clone - clone folder from github.com</li>
+            <li>git status - view file status</li>
+            <li>git add . - add files to commit</li>
+            <li>git remote -v - view repository list</li>
+            <li>git commit -m "description" - commit new files + comment</li>
+            <li>git push origin branchname - push files to update a branch at github.com</li>
+            <li>git checkout -b branchname - create branch and switch thereto</li>
+            <li>git commit -am "description" - commit changes + comment</li>
+            <li>git log - view action log</li>
+            <li>git push origin HEAD - push files to update the head of current branch</li>
+        </ul>
     </main>
     <footer></footer>
 
