--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
             <li>git add . - add files to commit</li>
             <li>git remote -v - view repository list</li>
             <li>git commit -m "description" - commit new files + comment</li>
-            <li>git push origin branchname - push files to update a branch at github.com</li>
+            <li>git push origin branchname - push code to update a branch at github.com</li>
             <li>git checkout -b branchname - create branch and switch thereto</li>
             <li>git commit -am "description" - commit changes + comment</li>
             <li>git log - view action log</li>
             <li>git push origin HEAD - push files to update the head of current branch</li>
+            <li>git checkout branchname - switch to the specified branch</li>
+            <li>git pull origin branchname - pull code from a github.com branch</li>
         </ul>
     </main>
     <footer></footer>
