--- a/pages/images.html
+++ b/pages/images.html
@@ -10,7 +10,7 @@
 
 <body>
     <div>
-        <img src="/images/spaceship.jpg" alt="spaceship">
+        <img src="../images/spaceship.jpg" alt="spaceship">
         <img src="../images/meadow.jpg" alt="meadow">
     </div>
 </body>
