--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <li>git checkout branchname - switch to the specified branch</li>
             <li>git pull origin branchname - pull code from a github.com branch</li>
         </ul>
+        <a href="./pages/images.html">Link to images</a>
     </main>
     <footer></footer>
 
