--- a/pages/images.html
+++ b/pages/images.html
@@ -13,6 +13,7 @@
         <img src="../images/spaceship.jpg" alt="spaceship">
         <img src="../images/meadow.jpg" alt="meadow">
     </div>
+    <a href="../index.html">Link to home</a>
 </body>
 
 </html>
