style folder+file added

--- a/index.html
+++ b/index.html
@@ -5,13 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learning GIT</title>
+    <title>Style adjustment</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <!--<style>
+        p {
+            color: green;
+            width: 700px;
+        }
+    </style>-->
 </head>
 
 <body>
 
     <header></header>
     <main>
+        <p class="byClass">"class" selector is used to determine style by element class</p>
+        <p id="byId">"id" selector is used to determine style by element ID</p>
+        <p data-target="id">"data-target" selector is used to determine style by element attribute</p>
     </main>
     <footer></footer>
 
