Homework_6 done (kinda)

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Картки з чудовими кішечками для Домашнього завдання №5</title>
+    <title>Квадратні квадрати</title>
     <link rel="stylesheet" href="./Style/style.css">
 </head>
 
@@ -13,66 +13,37 @@
 
     <header></header>
     <main>
-        <section class="section-1">
+        <section>
             <div class="container">
-                <h1 class="title">Чудові кішечки</h1>
-                <div class="card">
-                    <img src="./images/maine_coon.webp" alt="Мейн-кун">
-                    <h2>Мейн-кун</h2>
-                    <p class="class1">Найбільша з усіх порід кішок, мейн-кун має сильне тіло з добре розвиненими м'язами
-                        та міцними лапами. У них квадратна морда з великими широко посадженими вухами. Хутро довге й
-                        щільне, підшерстя вкрите блискучою товстою та водонепроникною верхньою шерстю.
-                    </p>
+                <div class="wrapper">
+                    <div class="square">1</div>
+                    <div>
+                        <div class="square right">2</div>
+                    </div>
                 </div>
-                <div class="card">
-                    <img src="./images/snowshoe.webp" alt="Сноу-шу">
-                    <h2>Сноу-шу</h2>
-                    <p class="class1">Ця кішка поєднує в собі міцну кремезність американської
-                        короткошерстої та витончену елегантність сіамської породи. Сноу-шу бувають блакитного,
-                        коричневого,
-                        лілового й шоколадного кольорів. Білі плями мають покривати не менше треті тіла кішки. Очі
-                        сноу-шу темно-синього кольору.
-                    </p>
+                <div class="wrapper">
+                    <div class="square">1</div>
+                    <div class="right">
+                        <div class="square small left">2</div>
+                        <div class="square small left">3</div>
+                        <div class="square small left">4</div>
+                        <div class="square small left">5</div>
+                    </div>
                 </div>
-                <div class="card">
-                    <img src="./images/british_shorthair.webp" alt="Британська короткошерста">
-                    <h2>Британська короткошерста</h2>
-                    <p class="class1">Доволі велика порода, яку можна описати як приземкувату й кремезну. Багато ліній
-                        її тіла заокруглені — морда та щоки, вуха, очі й голова. Коротке густе непухнасте хутро може
-                        мати понад 100 варіантів забарвлення та малюнків.
-                    </p>
-                </div>
-                <div class="card">
-                    <img src="./images/egyptian_mau.webp" alt="Єгипетська мау">
-                    <h2>Єгипетська мау</h2>
-                    <p class="class1">Коти породи єгипетська мау елегантні, мають атлетичний вигляд, вирізняються
-                        хаотичним плямистим забарвленням. Говорять, що кішки мау мають унікальний «стурбований» вираз
-                        мордочки.
-                    </p>
-                </div>
-                <div class="card">
-                    <img src="./images/ragdoll.webp" alt="Регдол">
-                    <h2>Регдол</h2>
-                    <p class="class1">це великі сильні та імпозантні кішки з характерними плямами на хутрі. Але ці коти
-                        надзвичайно спокійні та неквапливі, тому дещо нагадують ганчіркову ляльку (Ragdoll — «ганчіркова
-                        лялька»). Голова широка, з пласким верхом і широко посадженими вухами. У них великі блакитні
-                        очі, а хвіст — довгий і пухнастий.
-                    </p>
-                </div>
-                <div class="card">
-                    <img src="./images/bengal.webp" alt="Бенгальська кішка">
-                    <h2>Бенгальська</h2>
-                    <p class="class1">Бенгальські кішки великі, гнучкі, з добре розвиненою м'язовою системою і товстим,
-                        зазвичай низько опущеним хвостом. Особливої чарівності дикій зовнішності бенгальських кішок
-                        додає щільна і розкішно плямиста або мармурова шерсть. У жодної іншої породи немає ефекту
-                        напилення (блиску), який зустрічається в деяких бенгальських котів.
-                    </p>
+                <div class="wrapper">
+                    <div class="left">
+                        <div class="square left">1</div>
+                        <div class="square left">2</div>
+                    </div>
+                    <div class="right">
+                        <div class="square left">3</div>
+                        <div class="square left">4</div>
+                    </div>
                 </div>
             </div>
         </section>
     </main>
     <footer></footer>
-
 </body>
 
 </html>
