--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learning GIT</title>
+    <title>Calendar</title>
 </head>
 
 <body>
-
     <header></header>
     <main>
-        <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum numquam fugit vitae nesciunt perferendis
-            eligendi incidunt ex exercitationem similique itaque mollitia rerum veniam, obcaecati facere corporis cum
-            voluptatem ducimus illo?
-        </p>
+        <table>
+            <thead>Календар на 2023 рік</thead>
+            <tbody>
+
+            </tbody>
+        </table>
     </main>
     <footer></footer>
-
 </body>
 
 </html>
