--- a/index.html
+++ b/index.html
@@ -5,20 +5,104 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calendar</title>
+    <title>Simple</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./fonts/fonts.css">
 </head>
 
 <body>
-    <header></header>
+    <header class="header">
+        <div class="container">
+            <nav>
+                <a class="nav-link selected" href="###">HOMEPAGE</a>
+                <a class="nav-link" href="###">ABOUT AUTHOR</a>
+                <a class="nav-link" href="###">WORKS</a>
+                <a class="nav-link" href="###">PROCESS</a>
+                <a class="nav-link" href="###">CONTACTS</a>
+            </nav>
+        </div>
+    </header>
     <main>
-        <table>
-            <thead>Календар на 2023 рік</thead>
-            <tbody>
-
-            </tbody>
-        </table>
+        <section>
+            <div class="container">
+                <div class="text-wrap">
+                    <h1 class="main-title">Design and layout</h1>
+                    <p class="content-main">Lorem Ipsum is fish text often used in print and web design. Lorem Ipsum has
+                        been the standard
+                        "fish"
+                        for Latin texts since the early 16th century.</p>
+                    <p>
+                        <a href="mailto:********@*mail.com" class="button bg-blue">WRITE ME</a>
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="about bg-light">
+            <div class="container">
+                <h2 class="title">About me</h2>
+                <p class="content-about">About meLorem Ipsum is fish text often used in print and web design. Lorem
+                    Ipsum
+                    has
+                    been the standard
+                    "fish" for Latin texts since the early 16th century.</p>
+            </div>
+        </section>
+        <section class="cards-section bg-blue">
+            <div>
+                <div class="wrap">
+                    <div class="card">
+                        <img class="image" src="./images/group.png" alt="pencil&ruler">
+                        <h3 class="text">40+</h3>
+                        <span>projects</span>
+                    </div>
+                    <div class="card">
+                        <img class="image" src="./images/group.png" alt="pencil&ruler">
+                        <h3 class="text">40+</h3>
+                        <span>projects</span>
+                    </div>
+                    <div class="card">
+                        <img class="image" src="./images/group.png" alt="pencil&ruler">
+                        <h3 class="text">40+</h3>
+                        <span>projects</span>
+                    </div>
+                    <div class="card">
+                        <img class="image" src="./images/group.png" alt="pencil&ruler">
+                        <h3 class="text">40+</h3>
+                        <span>projects</span>
+                    </div>
+                    <div class="card">
+                        <img class="image" src="./images/group.png" alt="pencil&ruler">
+                        <h3 class="text">40+</h3>
+                        <span>projects</span>
+                    </div>
+                    <div class="card">
+                        <img class="image" src="./images/group.png" alt="pencil&ruler">
+                        <h3 class="text">40+</h3>
+                        <span>projects</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="how">
+            <div class="container">
+                <h2 class="title-how">How do I work</h2>
+                <p class="content-how">Lorem Ipsum is fish text often used in print and web design. Lorem Ipsum has
+                    been the standard "fish" for Latin texts since the early 16th century.</p>
+                <div class="video">
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/ZztmQsSAqfo"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer></footer>
+    <footer class="bg-blue">
+        <div class="container">
+            <h3 class="footer-text">How do I work</h3>
+            <p class="copyright">(c) 2018. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
