--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calendar</title>
+    <title>Title</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./fonts/fonts.css">
 </head>
@@ -13,12 +13,7 @@
 <body>
     <header></header>
     <main>
-        <table>
-            <thead>Календар на 2023 рік</thead>
-            <tbody>
 
-            </tbody>
-        </table>
     </main>
     <footer></footer>
 </body>
