--- a/index.html
+++ b/index.html
@@ -5,15 +5,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Menu</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./fonts/fonts.css">
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <div class="container">
+            <nav>
+                <ul class="menu">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Products<span class="expand"></span></a>
+                        <ul class="submenu list">
+                            <li><a href="">Product 1<span class="expand"></span></a></li>
+                            <li><a href="">Product 2<span class="expand"></span></a>
+                                <ul class="submenu list">
+                                    <li><a href="">Sub Item</a></li>
+                                    <li><a href="">Sub Item</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <main>
-
     </main>
     <footer></footer>
 </body>
